- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.12
 - 
    None
 - 
    Android X86, clang
 
tst_QBluetoothServiceDiscoveryAgent: 1 failed
 FAIL! : tst_QBluetoothServiceDiscoveryAgent::tst_invalidBtAddress() Compared values are not the same
 agent:2019/02/04 23:31:12 build.go:192: Actual (discoveryAgent->error()) : InvalidBluetoothAdapterError
 agent:2019/02/04 23:31:12 build.go:192: Expected (QBluetoothServiceDiscoveryAgent::NoError): NoError
 agent:2019/02/04 23:31:12 build.go:192: Loc: [tst_qbluetoothservicediscoveryagent.cpp(158)]
Coin build:
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly_1550367792
- is required for
 - 
                    
QTBUG-73511 Fix qtconnectivity tests for android
-         
 - Closed
 
 -